Doc image update + Testing Python version

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
   - git submodule sync
   - git submodule init
   - git submodule update
+  - echo `python -V`
   
 install: true
 
