--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   - MESSAGEBROKERNODEINSTANCETYPE=t2.small
   
 before_install:
-  - sudo add-apt-repository ppa:deadsnakes/ppa
+  - sudo add-apt-repository ppa:deadsnakes/ppa -y
   - sudo apt-get update
   - sudo apt-get install python2.7
   - echo "Installing AWS CLI"
