--- a/templates/nodecreate.template
+++ b/templates/nodecreate.template
@@ -743,7 +743,7 @@
                                 },
                                 "\n",
                                 "## Tag the instance (now that we're sure of launch index)\n",
-                                "instance_id=$(curl -f http://instance-data/latest/meta-data/instance-id)\n",
+                                "instance_id=$(curl -f http://169.254.169.254/latest/meta-data/instance-id)\n",
                                 "instance_tag=",
                                 {
                                     "Ref": "ParentStackName"
