--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ script:
   - aws cloudformation validate-template --template-body file://templates/solace.template
   - aws cloudformation validate-template --template-body file://templates/nodecreate.template
   - yaml-lint -n templates/
-  - sed -i "s@SolaceDockerImageParameterValue@bczoma/solacetest:100.0bugfix_9_4.0.185@g" ci/solace-aws-ha-3az-prod-travistest.json
+  - sed -i "s@SolaceDockerImageParameterValue@bczoma/solacetest:9.4.0.24@g" ci/solace-aws-ha-3az-prod-travistest.json
   - sed -i "s@EventBrokerNodeInstanceTypeParameterValue@$MESSAGEBROKERNODEINSTANCETYPE@g" ci/solace-aws-ha-3az-prod-travistest.json
   - sed -i "s@SolaceStackRegionNAME@$AWS_DEFAULT_REGION@g" ci/solace-aws-ha-3az-prod-travistest.json
   - aws s3 mb s3://solace-cf-quickstart-travistest || echo "s3 bucket already existed"
